--- a/Client/src/components/GlobalStyles/GlobalStyles.scss
+++ b/Client/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,10 +2,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 :root {
-  --primary: orange;
+  --primary: #f16b28;
+  --white: #fff;
+  --black: #000;
+  --text-color: #161823;
+  --gray: #767676;
+  --lightGray: #ddd;
+  --lightCyan: #77fef3;
+  --cyan: cyan;
+  --darkCyan: #06ccbc;
+  --star-gold: #ffc222;
+  --lightPink-color: rgb(252, 244, 244);
+  --lightOrange-color: rgb(241, 107, 40);
+  --lightRed-color: #f15f50;
+  --red-color: #f63400;
+  --chillRed-color: #f17171;
+  --customBlue: #03a9f4;
+  --facebookColor: #0675e7;
+
+  //Default layout
+  --default-layout-header-height: 60px;
+  --default-layout-width: 1535px;
+  --default-layout-horizontal-spacer: 24px;
+  --default-content-layout-padding: 154px;
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -17,4 +41,20 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 1.6rem;
   text-rendering: optimizeSpeed;
+}
+
+button,
+input,
+[tabindex] {
+  outline: none;
+  border: none;
+}
+
+input[type='checkbox'] {
+  // appearance: none;
+  // -webkit-appearance: none;
+}
+
+a[href] {
+  text-decoration: none;
 }
