handle Login and Register JWT

--- a/Client/src/components/GlobalStyles/GlobalStyles.scss
+++ b/Client/src/components/GlobalStyles/GlobalStyles.scss
@@ -8,6 +8,7 @@
   --text-color: #161823;
   --gray: #767676;
   --lightGray: #ddd;
+  --grayBorder: #e5e5e5;
   --lightCyan: #77fef3;
   --cyan: cyan;
   --darkCyan: #06ccbc;
@@ -17,6 +18,7 @@
   --lightRed-color: #f15f50;
   --red-color: #f63400;
   --chillRed-color: #f17171;
+  --chillYellow: #fff4ec;
   --customBlue: #03a9f4;
   --facebookColor: #0675e7;
 
