--- a/Client/src/components/ShopSideBar/ShopSideBar.module.scss
+++ b/Client/src/components/ShopSideBar/ShopSideBar.module.scss
@@ -1,36 +1,45 @@
 .shop_sidebar {
-  width: 22%;
+  width: 23%;
   margin-right: 32px;
   --shop-category-default-height: 38px;
 }
 
+.category_container {
+  padding: 10px;
+  border: 2px solid var(--grayBorder);
+  border-radius: 20px;
+}
+
 .sidebar_header {
-  margin: 7px 0;
+  // margin: 7px 0;
+  margin-bottom: 8px;
   height: var(--shop-category-default-height);
   line-height: var(--shop-category-default-height);
-  background-color: var(--primary);
+  // background-color: var(--primary);
 
   .header {
     padding-left: 10px;
-    font-size: 1.8rem;
-    color: var(--white);
+    font-size: 2rem;
+    color: var(--black);
   }
 }
 
 .category_list {
-  padding: 0;
+  padding: 10px 15px;
   margin: 0;
   list-style: none;
+  background-color: var(--chillYellow);
+  border-radius: 20px;
 
   .category {
     display: flex;
     align-items: center;
     font-size: 1.6rem;
-    padding: 18px 0;
-    border-bottom: 1px solid #ccc;
+    height: 60px;
+    border-bottom: 2px var(--grayBorder) dashed;
 
     .category-name {
-      padding: 0 4px;
+      padding: 18px 5px;
       cursor: pointer;
       flex: 1;
       // &:hover {
@@ -39,7 +48,6 @@
     }
 
     .category-checkbox {
-      // background-color: var(--lightGray);
       width: 15px;
       height: 15px;
       border-radius: 3px;
@@ -48,6 +56,15 @@
       accent-color: var(--primary);
       cursor: pointer;
     }
+  }
+
+  .category:first-child {
+    height: 50px;
+  }
+
+  .category:last-child {
+    height: 50px;
+    border-bottom: none;
   }
 }
 
