--- a/Client/src/components/SortBar/SortBar.module.scss
+++ b/Client/src/components/SortBar/SortBar.module.scss
@@ -2,9 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: var(--primary);
+  // background-color: var(--primary);
   margin-bottom: 15px;
-  margin-top: 8px;
   height: 58px;
   border-radius: 5px;
 }
@@ -16,16 +15,18 @@
   .sort_by {
     margin-right: 15px;
     margin-left: 10px;
-    color: var(--white);
+    color: var(--black);
   }
   .sort_select {
     position: relative;
     display: flex;
     align-items: center;
-    width: 202px;
-    height: 34px;
+    // border-radius: 5px;
+    // padding: 0 8px 0 12px;
+    width: 205px;
+    height: 62px;
     line-height: 34px;
-    background-color: var(--white);
+    background-color: var(--chillYellow);
     .select_icon {
       position: absolute;
       right: 8px;
@@ -35,10 +36,12 @@
 
 .sort_select {
   select {
+    border-radius: 5px;
+    padding: 0 8px 0 12px;
     width: 100%;
     height: 100%;
-    padding: 0 8px 0 12px;
     font-size: 1.5rem;
+    background-color: var(--chillYellow);
     // -webkit-appearance: none;
     outline: none;
     border: none;
