--- a/Client/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/Client/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -2,5 +2,7 @@
   padding-top: var(--default-layout-header-height);
   width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
