--- a/Client/src/components/ProductCard/ProductCard.module.scss
+++ b/Client/src/components/ProductCard/ProductCard.module.scss
@@ -1,9 +1,9 @@
 .product-card {
   // height: 460px;
-  background-color: var(--lightPink-color);
+  background-color: var(--chillYellow);
   overflow: hidden;
   border-radius: 15px;
-  border: solid 1.6px rgb(239, 239, 239);
+  // border: solid 1.6px rgb(239, 239, 239);
 }
 
 .product-img {
