--- a/Client/src/components/SortBar/SortBar.module.scss
+++ b/Client/src/components/SortBar/SortBar.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   // background-color: var(--primary);
-  margin-bottom: 15px;
+  margin-bottom: 25px;
   height: 58px;
   border-radius: 5px;
 }
@@ -40,7 +40,8 @@
     padding: 0 8px 0 12px;
     width: 100%;
     height: 100%;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+    // font-weight: bold;
     background-color: var(--chillYellow);
     // -webkit-appearance: none;
     outline: none;
@@ -58,8 +59,8 @@
   justify-content: space-between;
 
   button {
-    color: var(--primary);
-    background-color: var(--white);
+    color: var(--white);
+    background-color: var(--primary);
     height: 32px;
     width: 35px;
     cursor: pointer;
@@ -76,15 +77,23 @@
     margin-left: 15px;
     margin-right: 2px;
   }
-  .mini_nagination_next-btn {
-    margin-right: 10px;
-  }
+  // .mini_nagination_next-btn {
+  //   margin-right: 10px;
+  // }
 }
 
 .mini_nagination_state {
-  color: var(--white);
+  color: var(--black);
   font-size: 1.7rem;
+  display: flex;
+  align-items: center;
+  // font-weight: bold;
+
   .mini_nagination_current {
-    color: var(--white);
+    color: var(--primary);
+  }
+
+  .mini_nagination_title {
+    margin-right: 8px;
   }
 }
