--- a/Client/src/components/GlobalStyles/GlobalStyles.scss
+++ b/Client/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,10 +3,13 @@
 // @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 :root {
   --primary: #f16b28;
+  --primaryHover: #f05b11;
+  --primaryActive: #ed4f00;
   --white: #fff;
   --black: #000;
   --text-color: #161823;
   --gray: #767676;
+  --darkGray: rgb(80, 80, 80);
   --lightGray: #ddd;
   --grayBorder: #e5e5e5;
   --lightCyan: #77fef3;
