make Carousel component

--- a/Client/src/components/GlobalStyles/GlobalStyles.scss
+++ b/Client/src/components/GlobalStyles/GlobalStyles.scss
@@ -14,7 +14,7 @@
   --grayBorder: #e5e5e5;
   --lightCyan: #77fef3;
   --cyan: cyan;
-  --darkCyan: #06ccbc;
+  --darkCyan: #25bdb0;
   --star-gold: #ffc222;
   --lightPink-color: rgb(252, 244, 244);
   --lightOrange-color: rgb(241, 107, 40);
