--- a/Client/src/components/Button/Button.module.scss
+++ b/Client/src/components/Button/Button.module.scss
@@ -12,9 +12,9 @@
   border: 1px solid transparent;
   user-select: none;
 
-  + .wrapper {
-    margin-left: 8px;
-  }
+  // + .wrapper {
+  //   margin-left: 8px;
+  // }
 
   &.disabled {
     pointer-events: none;
