--- a/Client/src/pages/CheckoutDone/CheckoutDone.module.scss
+++ b/Client/src/pages/CheckoutDone/CheckoutDone.module.scss
@@ -1,11 +1,8 @@
 .inner {
-  //   width: 100%;
-  min-width: 1400px;
+  width: var(--default-layout-width);
   padding: 110px 174px 90px 174px;
   display: flex;
   flex-direction: column;
-  //   align-items: flex-start;
-  //   justify-content: flex-start;
 }
 
 .thanks-title {
