--- a/Client/src/components/Button/Button.module.scss
+++ b/Client/src/components/Button/Button.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   min-width: 100px;
   padding: 9px 16px;
-  border-radius: 4px;
+  // border-radius: 4px;
   font-size: 1.6rem;
   font-weight: 700;
   cursor: pointer;
