--- a/Client/src/components/Popper/Menu/Menu.module.scss
+++ b/Client/src/components/Popper/Menu/Menu.module.scss
@@ -21,7 +21,7 @@
   font-weight: 600;
 
   &.separate {
-    border-top: 1px solid rgba(22, 24, 35, 0.12);
+    border-top: 1px solid var(--lightGray);
   }
 
   &:hover {
