--- a/Client/src/pages/Detail/Detail.module.scss
+++ b/Client/src/pages/Detail/Detail.module.scss
@@ -163,7 +163,7 @@
   // grid-template-columns: 1fr 1fr 1fr 1fr;
   // // grid-template-rows: 1fr 1fr;
   // grid-gap: 30px 20px;
-  height: 100%;
+  height: auto;
   width: 100%;
 }
 
