--- a/Client/src/pages/CartPage/CartPage.module.scss
+++ b/Client/src/pages/CartPage/CartPage.module.scss
@@ -212,6 +212,7 @@
 
   .subtotal,
   .total {
+    // margin: 1px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -230,7 +231,7 @@
   .subtotal {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    margin-bottom: 0.5px;
+    border-bottom: 1px solid var(--white);
   }
 
   .total {
