--- a/Client/src/components/OrderDetail/OrderDetail.module.scss
+++ b/Client/src/components/OrderDetail/OrderDetail.module.scss
@@ -1,14 +1,21 @@
 .order-box {
   width: 100%;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  // box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.order-id-status {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 20px;
+  padding: 18px 0;
+  border-bottom: 2px solid var(--lightGray);
 }
 
 .order-id {
   display: flex;
   align-items: center;
-  padding: 18px 0;
-  margin: 0px 20px;
-  border-bottom: 2px solid var(--lightGray);
   h3 {
     font-size: 2.1rem;
   }
@@ -19,12 +26,18 @@
   }
 }
 
+.order-status {
+  color: var(--primary);
+  font-size: 2.2rem;
+}
+
 .order-product-list {
   padding: 18px 20px;
   width: 100%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  border-bottom: 2px dashed var(--gray);
 }
 
 .order-product,
@@ -84,6 +97,7 @@
 .order-footer {
   height: 120px;
   background-color: var(--lightOrange-color);
+  // border-top: 2px dashed var(--darkGray);
   display: flex;
   justify-content: space-between;
   align-items: center;
