--- a/Client/src/pages/UserPurchase/UserPurchase.module.scss
+++ b/Client/src/pages/UserPurchase/UserPurchase.module.scss
@@ -7,90 +7,29 @@
   margin: 25px 0;
 }
 
-.user-options {
-  width: 21%;
-  margin-right: 44px;
-}
-
-.user-display,
-.mini-infor,
-.options,
-.option {
-  display: flex;
-}
-
-.user-display {
-  padding-bottom: 15px;
-  align-items: center;
-  border-bottom: 1px solid var(--lightGray);
-}
-
-.mini-infor {
-  flex-direction: column;
-
-  .mini-nick-name {
-    margin-bottom: 3px;
-    color: var(--primary);
-  }
-
-  .mini-full-name {
-    font-weight: bold;
-  }
-}
-
-.user-imgBox {
-  width: 56px;
-  height: 56px;
-  margin-right: 18px;
-
-  .user-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-  }
-}
-
-.options {
-  margin-top: 25px;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.option {
-  width: 100%;
-  align-items: center;
-  cursor: pointer;
-  padding-bottom: 30px;
-
-  .purchase-icon,
-  .account-icon {
-    color: var(--primary);
-    font-size: 2.4rem;
-    margin-right: 15px;
-  }
-
-  .account-icon {
-    margin-left: 3px;
-    margin-right: 19px;
-  }
-
-  .account-title,
-  .purchase-title {
-    font-size: 2.1rem;
-    color: var(--darkGray);
-    font-weight: bold;
-  }
-
-  &:hover .account-title {
-    color: var(--primary);
-  }
-
-  &:hover .purchase-title {
-    color: var(--primary);
-  }
-}
-
+//User order
 .user-orders {
   flex: 1;
+}
+
+.order-status {
+  width: 100%;
+  margin-bottom: 15px;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  // box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  .status {
+    width: 25%;
+    padding: 16px 0;
+    font-size: 1.9rem;
+    transition: all 0.18s ease;
+
+    &:hover {
+      color: var(--primary);
+    }
+  }
+
+  .status.active-status {
+    color: var(--primary);
+    border-bottom: 3px solid var(--primary);
+  }
 }
