--- a/Client/src/components/OrderDetail/OrderDetail.module.scss
+++ b/Client/src/components/OrderDetail/OrderDetail.module.scss
@@ -1,5 +1,6 @@
 .order-box {
   width: 100%;
+  margin-bottom: 35px;
   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
   // box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
