--- a/Client/src/components/PriceFilter/PriceFilter.module.scss
+++ b/Client/src/components/PriceFilter/PriceFilter.module.scss
@@ -15,17 +15,24 @@
   margin-top: 10px;
 
   .price_input {
+    padding: 6px 0;
+    border-radius: 8px;
     width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 15px 0 25px;
+    margin-top: 0;
+    border: 2px solid var(--lightGray);
+    // box-shadow: rgb(67 71 85 / 27%) 0px 0px 0.25em, rgb(90 125 188 / 5%) 0px 0.25em 1em;
   }
 }
 
 .field {
   display: flex;
   align-items: center;
-  width: 100%;
-  height: 45px;
+  // width: 100%;
+  // height: 45px;
 
   input {
     font-size: 1.5rem;
@@ -45,9 +52,14 @@
   }
 }
 
+.field-price {
+  margin-left: 5px;
+}
+
 .separator {
   font-size: 2.6rem;
-  width: 70px;
+  // width: 70px;
+  margin: 0 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -99,8 +111,15 @@
   }
 }
 
+.line-separate {
+  margin: 30px 0;
+  border: 1px solid var(--lightGray);
+}
+
 .filter-btn {
-  margin: 20px 0 35px 0;
+  // margin: 35px 0;
+  margin-bottom: 30px;
+  // margin: 20px 0 35px 0;
   font-size: 1.8rem;
   font-weight: bold;
   height: 40px;
