--- a/Client/src/pages/CheckoutDone/CheckoutDone.module.scss
+++ b/Client/src/pages/CheckoutDone/CheckoutDone.module.scss
@@ -5,6 +5,11 @@
   flex-direction: column;
 }
 
+.order-infors {
+  display: flex;
+  flex-direction: column;
+}
+
 .thanks-title {
   font-size: 3.1rem;
 }
