--- a/Client/src/components/Input/Input.module.scss
+++ b/Client/src/components/Input/Input.module.scss
@@ -31,6 +31,10 @@
     border: 2px solid var(--primary);
     // border-radius: 100%;
   }
+
+  .red-outline {
+    border: 2px solid var(--red-color);
+  }
   // }
 
   .input_error {
