--- a/Client/src/pages/Product/Product.module.scss
+++ b/Client/src/pages/Product/Product.module.scss
@@ -3,7 +3,7 @@
   padding: 0 var(--default-content-layout-padding);
   justify-content: space-between;
   align-items: flex-start;
-  width: var(--default-layout-width);
+  max-width: var(--default-layout-width);
   margin: 68px 0;
   //   width: 100%;
 }
