--- a/Client/src/components/Carousel/Carousel.module.scss
+++ b/Client/src/components/Carousel/Carousel.module.scss
@@ -21,6 +21,7 @@
   margin: auto;
   text-align: center;
   white-space: nowrap;
+  flex-wrap: nowrap;
   z-index: 1;
   caret-color: transparent;
   transition: all 700ms ease-in-out;
@@ -30,20 +31,33 @@
   display: none;
 }
 
+.left-arrow,
+.right-arrow {
+  width: 35px;
+  height: 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: var(--primary);
+  color: var(--white);
+
+  &:hover {
+    background-color: var(--darkCyan);
+  }
+}
+
+.left-arrow-icon,
+.right-arrow-icon {
+  font-size: 2.5rem;
+}
+
 .left-arrow {
   position: absolute;
   left: -3%;
   cursor: pointer;
   z-index: 2;
-  color: var(--primary);
-
-  &:hover {
-    color: var(--darkCyan);
-  }
-
-  .left-arrow-icon {
-    font-size: 3.4rem;
-  }
 }
 
 .right-arrow {
@@ -51,15 +65,6 @@
   right: -3%;
   cursor: pointer;
   z-index: 2;
-  color: var(--primary);
-
-  &:hover {
-    color: var(--darkCyan);
-  }
-
-  .right-arrow-icon {
-    font-size: 3.4rem;
-  }
 }
 // .carouselItem {
 //   touch-action: none;
