--- a/Client/src/pages/Home/Home.module.scss
+++ b/Client/src/pages/Home/Home.module.scss
@@ -170,6 +170,136 @@
   }
 }
 
+/* HOME-SLIDER */
+.Home-slider {
+  width: 100%;
+  max-width: var(--default-layout-width);
+  margin-bottom: 80px;
+
+  .slider-prev-btn,
+  .slider-next-btn {
+    width: 55px;
+    height: 55px;
+    outline: none;
+    background-color: rgba(255, 255, 255, 0.2);
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+    }
+  }
+
+  .slider-prev-btn {
+    left: 25px;
+  }
+
+  .slider-next-btn {
+    right: 25px;
+  }
+}
+
+.Home-slider .slider__container {
+  width: 100%;
+  max-width: var(--default-layout-width);
+
+  height: 650px;
+  /* height: auto; */
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+}
+
+.Home-slider .slider {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  animation: fadeIn 0.7s ease-in-out;
+}
+
+.Home-slider .slider img {
+  // width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slide-content {
+  position: absolute;
+  /* z-index: 1; */
+  // top: 50%;
+  // left: 50%;
+  top: 35%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  width: 70%;
+  // transform: translate(50%, 50%);
+  // text-align: center;
+  /* right: 45%;
+  
+  transform: translateX(50%); */
+  font-weight: bold;
+  color: var(--white);
+  animation: homeSlideItemAnimation 1.1s ease-in-out;
+}
+
+.text {
+  font-size: 6.8rem;
+}
+
+@keyframes homeSlideItemAnimation {
+  from {
+    opacity: 0;
+    top: 60%;
+  }
+  to {
+    opacity: 1;
+    top: 35%;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.slide-description {
+  // margin-top: 10px;
+  margin: 14px;
+  font-size: 2.6rem;
+  animation: downToUpOpacity 1.1s ease-in-out;
+}
+
+.Home-slider {
+  .slide-btn {
+    color: var(--white);
+    padding: 15px 25px;
+    margin-top: 25px;
+    border-radius: 5px;
+    animation: downToUpOpacity 1.2s ease-in-out;
+
+    &:hover {
+      background-color: var(--primaryActive);
+    }
+    transition: all 0.15s linear;
+  }
+}
+
+/* .Home__next-prev-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+} */
+
+// MENU BOARD
 .menu-cointainer,
 .menu-board {
   display: flex;
