--- a/Client/src/pages/Contact/Contact.module.scss
+++ b/Client/src/pages/Contact/Contact.module.scss
@@ -44,7 +44,7 @@
 .form-title {
   font-size: 5rem;
   color: #414549;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 .form-subtitle {
@@ -90,16 +90,20 @@
 
 .user-message__input {
   width: 83%;
+  padding-top: 15px;
+  padding-left: 15px;
   border-radius: 35px;
-  padding-bottom: 75px;
-  padding-left: 25px;
+  // padding-bottom: 75px;
+  // padding-left: 25px;
   font-size: 1.7rem;
   outline: none;
   border: 2px solid #9a9a9a;
+  resize: none;
 }
 
 .contact-send-btn {
   margin-top: 25px;
+  color: var(--black);
   background-color: var(--lightOrange-color);
   width: 250px;
   height: 55px;
@@ -107,14 +111,15 @@
   text-align: center;
   border-radius: 35px;
   cursor: pointer;
+  transition: all 0.12s linear;
 }
 
 .contact-send-btn:hover {
-  background-color: var(--cyan-color);
+  color: var(--white);
+  background-color: var(--darkCyan);
 }
 
 .contact-send-btn span {
   font-size: 1.7rem;
   font-weight: bold;
-  color: var(--white-color);
 }
