--- a/Client/src/pages/Home/Home.module.scss
+++ b/Client/src/pages/Home/Home.module.scss
@@ -272,7 +272,7 @@
   // margin-top: 10px;
   margin: 14px;
   font-size: 2.6rem;
-  animation: downToUpOpacity 1.1s ease-in-out;
+  // animation: downToUpOpacity 1.1s ease-in-out;
 }
 
 .Home-slider {
@@ -281,7 +281,7 @@
     padding: 15px 25px;
     margin-top: 25px;
     border-radius: 5px;
-    animation: downToUpOpacity 1.2s ease-in-out;
+    // animation: downToUpOpacity 1.2s ease-in-out;
 
     &:hover {
       background-color: var(--primaryActive);
