--- a/Client/src/pages/Login/Login.module.scss
+++ b/Client/src/pages/Login/Login.module.scss
@@ -1,4 +1,5 @@
 .login_form {
+  width: 330px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,24 +11,10 @@
 }
 
 .login_body {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  .feild {
-    display: flex;
-    height: 55px;
-    width: 346px;
-    margin: 16px 0;
-
-    input {
-      height: 100%;
-      width: 100%;
-      font-size: 1.6rem;
-      padding-left: 12px;
-      border: 2px solid var(--primary);
-      border-radius: 50px;
-    }
-  }
 
   .signIn_btn {
     margin-top: 18px;
@@ -36,6 +23,21 @@
     span {
       font-size: 1.8rem;
     }
+  }
+}
+
+.feild {
+  display: flex;
+  width: 100%;
+  margin: 16px 0;
+
+  .form-input {
+    height: 56px;
+    width: 100%;
+    font-size: 1.7rem;
+    padding-left: 12px;
+    border: 2px solid var(--primary);
+    border-radius: 50px;
   }
 }
 
