--- a/Client/src/pages/Product/Product.module.scss
+++ b/Client/src/pages/Product/Product.module.scss
@@ -4,6 +4,6 @@
   justify-content: space-between;
   align-items: flex-start;
   max-width: var(--default-layout-width);
+  width: 100%;
   margin: 68px 0;
-  //   width: 100%;
 }
