--- a/Client/src/components/GlobalStyles/GlobalStyles.scss
+++ b/Client/src/components/GlobalStyles/GlobalStyles.scss
@@ -48,6 +48,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 1.6rem;
   text-rendering: optimizeSpeed;
+  overflow-y: auto;
 }
 
 button,
