--- a/Client/src/components/UserOrders/UserOrders.module.scss
+++ b/Client/src/components/UserOrders/UserOrders.module.scss
@@ -13,6 +13,7 @@
     padding: 16px 0;
     font-size: 1.9rem;
     transition: all 0.18s ease;
+    border-bottom: 3px solid var(--white);
 
     &:hover {
       color: var(--primary);
