--- a/Client/src/components/Input/Input.module.scss
+++ b/Client/src/components/Input/Input.module.scss
@@ -39,6 +39,7 @@
 
   .input_error {
     display: block;
+    // margin-top: 6px;
     font-size: 1.4rem;
     height: 16px;
     color: var(--red-color);
