--- a/Client/src/pages/Checkout/Checkout.module.scss
+++ b/Client/src/pages/Checkout/Checkout.module.scss
@@ -1,12 +1,9 @@
 .inner {
-  //   display: flex;
-  //   flex-direction;
   padding: 0 var(--default-content-layout-padding);
-  //   justify-content: space-between;
-  //   align-items: flex-start;
   max-width: var(--default-layout-width);
   width: 100%;
   margin: 68px 0;
+  margin-bottom: 140px;
 }
 
 .checkout-form {
