--- a/Client/src/pages/Product/Product.module.scss
+++ b/Client/src/pages/Product/Product.module.scss
@@ -5,5 +5,6 @@
   align-items: flex-start;
   max-width: var(--default-layout-width);
   width: 100%;
-  margin: 68px 0;
+  margin-top: 68px;
+  margin-bottom: 120px;
 }
