--- a/Client/src/components/CartPageProduct/CartPageProduct.module.scss
+++ b/Client/src/components/CartPageProduct/CartPageProduct.module.scss
@@ -70,7 +70,6 @@
 .product_price {
   width: 16%;
   text-align: center;
-  //   font-size: 1.8rem;
   .price_amount {
     font-size: 1.8rem;
   }
@@ -89,6 +88,8 @@
   width: 16%;
   text-align: right;
   .total_amount {
-    font-size: 1.7rem;
+    color: var(--primary);
+    font-size: 1.8rem;
+    font-weight: bold;
   }
 }
