--- a/Client/src/components/ProductCard/ProductCard.module.scss
+++ b/Client/src/components/ProductCard/ProductCard.module.scss
@@ -3,6 +3,13 @@
   background-color: var(--chillYellow);
   overflow: hidden;
   border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  height: 460px;
+
+  a {
+    height: 50%;
+  }
   // border: solid 1.6px rgb(239, 239, 239);
 }
 
@@ -10,6 +17,7 @@
   position: relative;
   padding: 12px;
   width: 100%;
+  height: 100%;
   overflow: hidden;
 
   img {
@@ -22,7 +30,8 @@
 
 .product-information {
   // height: 46%;
-  padding: 10px 26px 32px 26px;
+  height: 50%;
+  padding: 0px 26px 32px 26px;
   display: flex;
   flex-direction: column;
   align-items: center;
